<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:title="@string/settings_display_title"
        app:layout="@layout/layout_preference_screen_title_headline_large"
        app:selectable="false" />

    <ListPreference
        app:defaultValue="3"
        app:dialogTitle="@string/settings_display_theme_dialog_title"
        app:entries="@array/app_theme"
        app:entryValues="@array/app_theme_value"
        app:icon="@drawable/ic_outline_brightness_4_24"
        app:key="app_theme"
        app:title="@string/settings_display_theme_title"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:icon="@drawable/ic_outline_color_lens_24"
        app:key="app_dynamic_color_enable"
        app:summary="@string/settings_display_dynamic_color_summary"
        app:widgetLayout="@layout/layout_preference_material3_switch"
        app:title="@string/settings_display_dynamic_color_title" />

</PreferenceScreen>