<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_local_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expandedHintEnabled="false"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/et_local_path"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/git_tab_local_path"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_remote_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expandedHintEnabled="false">

        <EditText
            android:id="@+id/et_remote_path"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/git_tab_remote_path" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_clone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/round_content_copy_20"
        android:text="@string/git_tab_btn_clone"/>

    <Button
        android:id="@+id/btn_pull"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_drive_file_move_24"
        android:text="Pull from remote repository"/>

    <Button
        android:id="@+id/btn_add_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_add_24"
        android:text="Add file"/>

</LinearLayout>